# MSN-VPN

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: server_entries.txt
app/src/main/cpp/: CMakeLists.txt  aether_jni.cpp
app/src/main/java/studio/cluvex/aethery/: AetherVpnService.kt  AppUpdater.kt  IpFetcher.kt  MainActivity.kt  NativeCore.kt  PsiphonProxyService.kt  PsiphonTunService.kt  PsiphonVpnService.kt  SplitTunnelSettings.kt  VpnState.kt  VpnTileService.kt
app/src/main/res/drawable/: ic_github.xml  ic_launcher_background.xml  ic_notification.xml  ic_settings.xml  ic_vpn_status_shield.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  styles.xml
core/: README.fa.md  README.md  aether.sh  build-android-linux.sh  build-android.ps1
core/.github/workflows/: release.yml
core/Docs/: GUIDE.en.md  GUIDE.fa.md
core/aether/: Cargo.toml
core/aether/src/: dns.rs  ffi.rs  lib.rs  main.rs  masque_h2.rs  platform.rs  prober.rs  quic.rs  socks.rs  tls.rs  tun.rs  wg_prober.rs  wireguard.rs
docs/: README.md  TASK-v1.3.0-android-ffi.md  WALKTHROUGH-v1.3.0-android-ffi.md  architecture.md  build.md  release.md
